[package]
name = "hierarchical_pathfinding"
version = "0.5.0"
authors = ["mich101mich <mich101mich@gmail.com>"]
edition = "2018"
description = "Quickly approximate Paths on a Grid"
repository = "https://github.com/mich101mich/hierarchical_pathfinding"
readme = "readme.md"
license = "MIT"
keywords = ["pathfinding", "dijkstra", "a-star", "grid"]
categories = ["algorithms"]
exclude = [
    "/.vscode/*",
    "/todo.md",
    "/.gitignore",
    "/.github/*",
    "/benchmark/*",
    "/img/*",
    "/benches/*",
]

[dependencies]
hashbrown = "0.11.2"
log = { version = "0.4.14", optional = true }
rayon = { version = "1.5", optional = true }

[dev-dependencies]
criterion = "0.3.4"
env_logger = "0.8.4"
log = "0.4.14"
nanorand = "0.6"

[[bench]]
name = "my_benchmark"
harness = false


[features]
default = ["parallel"]
parallel = ["rayon", "hashbrown/rayon"]
