[package]
name = "hierarchical_pathfinding"
version = "0.5.0"
authors = ["mich101mich <mich101mich@gmail.com>"]
edition = "2018"
description = "Quickly approximate Paths on a Grid"
repository = "https://github.com/mich101mich/hierarchical_pathfinding"
readme = "readme.md"
license = "MIT"
keywords = ["pathfinding", "dijkstra", "a-star", "grid"]
categories = ["algorithms"]
exclude = [
    "/.github/*",
    "/.vscode/*",
    "/img/*",
    "/.gitignore",
]

[dependencies]
hashbrown = "0.11"
log = { version = "0.4", optional = true }   # Feature used for measuring internal timings. Recommended to leave this off unless working on improvements to hierarchical_pathfinding.
rayon = { version = "1.5", optional = true }  # don't set this directly, use feature `parallel` instead.

[dev-dependencies]
criterion = "0.3"
env_logger = "0.8"
log = "0.4"
nanorand = "0.6"

[features]
default = ["parallel"]
parallel = ["rayon", "hashbrown/rayon"]

[[bench]]
name = "my_benchmark"
harness = false
