[package]
name = "hierarchical_pathfinding"
version = "0.5.1"
authors = ["mich101mich <mich101mich@gmail.com>"]
edition = "2021"
description = "Quickly approximate Paths on a Grid"
repository = "https://github.com/mich101mich/hierarchical_pathfinding"
readme = "readme.md"
license = "MIT"
keywords = ["pathfinding", "dijkstra", "a-star", "grid"]
categories = ["algorithms"]
exclude = [
    "/.github/*",
    "/.vscode/*",
    "/img/*",
    "/.gitignore",
]

[dependencies]
hashbrown = "0.14.0"
log = { version = "0.4.0", optional = true }   # Feature used for measuring internal timings. Recommended to leave this off unless working on improvements to hierarchical_pathfinding.
rayon = { version = "1.8.0", optional = true }  # don't set this directly, use feature `parallel` instead.
slab = "0.4.0"

[dev-dependencies]
criterion = "0.5.0"
env_logger = "0.10.0"
log = "0.4.0"
nanorand = "0.7.0"

# fixes for minimal-versions
serde = "1.0.100" # dependency of criterion: 'serde = "1.0"', but 1.0.0 to 1.0.99 stopped working

[features]
default = ["parallel"]
parallel = ["rayon", "hashbrown/rayon"]

[[bench]]
name = "my_benchmark"
harness = false
